--- a/package.json
+++ b/package.json
@@ -49,16 +49,17 @@
     "express": "4.17.1",
     "fastify": "^3.24.1",
     "fastify-swagger": "^4.12.6",
+    "http-status-codes": "^2.1.4",
     "swagger-ui-express": "4.1.6",
     "uuid": "8.3.2",
     "yamljs": "0.3.0"
   },
   "devDependencies": {
-    "@babel/eslint-parser": "7.16.3",
+    "@babel/eslint-parser": "^7.16.3",
     "chai": "4.3.4",
     "debug": "4.3.2",
     "dirty-chai": "2.0.1",
-    "eslint": "8.2.0",
+    "eslint": "^8.2.0",
     "eslint-config-airbnb-base": "15.0.0",
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-import": "2.25.3",
